<resources>
    <string name="mms_interval">0,1,5,10,30</string>
    <string name="mms_video_container_format" />
    <string name="mms_http_header">X_MDN: 1##LINE1##</string>
    <string name="strict_phonenumber_comparison_prefix" />
    <string name="notification_ringtone">content://settings/system/notification_sound</string>
    <string name="mms_image_resolution">XGA</string>
    <string name="sms_original_address_pattern" />
    <string name="sms_original_address_replacement" />
    <string name="conversation_strings_cannot_send_empty_message_txt">Empty message. Cannot send.</string>
    <string name="conversation_strings_notification_content_delivery_failed_multiple_txt">Undelivered messages: %d</string>
    <string name="conversation_strings_notification_content_delivery_failed_single_txt">Not delivered</string>
    <string name="conversation_strings_notification_content_download_failed_multiple_txt">Messages not downloaded: %d</string>
    <string name="conversation_strings_notification_content_download_failed_single_txt">Not downloaded</string>
    <string name="conversation_strings_notification_content_message_received_multiple_txt">New messages: %d</string>
    <string name="conversation_strings_notification_content_message_received_single_txt">New message</string>
    <string name="conversation_strings_notification_content_sending_failed_multiple_txt">Unsent messages: %d</string>
    <string name="conversation_strings_notification_content_sending_failed_single_txt">Could not send</string>
    <string name="conversation_strings_notification_content_sim_full_txt">Delete some messages to make room</string>
    <string name="conversations_strings_notification_sms_rejected_mem_full_title_txt">New message rejected</string>
    <string name="conversations_strings_notification_sms_rejected_mem_full_content_txt">Memory full. Delete some messages.</string>
    <string name="conversation_strings_notification_title_messaging_txt">Messaging</string>
    <string name="conversation_strings_notification_title_sim_full_txt">SIM card full</string>
    <string name="conversations_strings_action_message_copied_txt">Message copied</string>
    <string name="conversations_strings_action_message_copy_txt">Copy to phone</string>
    <string name="conversations_strings_action_message_copy_to_tablet_txt">Copy to tablet</string>
    <string name="conversations_strings_action_message_copying_txt">Copying message</string>
    <string name="conversations_strings_action_message_delete_txt">Delete message</string>
    <string name="conversations_strings_menu_action_set_wallpaper_txt">Conversation wallpaper</string>
    <string name="conversations_strings_menu_action_clear_wallpaper_txt">Clear conversation wallpaper</string>
    <string name="conversations_strings_menu_action_set_priority_txt">Set priority</string>
    <string name="conversations_strings_dialog_set_priority_title_txt">Set priority</string>
    <string name="conversations_strings_priority_high_txt">High</string>
    <string name="conversations_strings_action_message_star_txt">Add star</string>
    <string name="conversations_strings_action_message_unstar_txt">Delete star</string>
    <string name="conversations_strings_action_message_view_details_txt">View message details</string>
    <string name="conversations_strings_dialog_title_message_details_txt">Message details</string>
    <string name="conversations_strings_message_details_type_txt">Type:</string>
    <string name="conversations_strings_message_details_from_txt">From:</string>
    <string name="conversations_strings_message_details_to_txt">To:</string>
    <string name="conversations_strings_message_details_sent_txt">Sent:</string>
    <string name="conversations_strings_message_details_expires_txt">Expires:</string>
    <string name="conversations_strings_message_details_received_txt">Received:</string>
    <string name="conversations_strings_message_details_priority_txt">Priority:</string>
    <string name="conversations_strings_message_details_mms_subject_txt">Subject:</string>
    <string name="conversations_strings_message_details_mms_size_txt">Size:</string>
    <string name="conversations_strings_message_details_status_txt">Status:</string>
    <string name="conversations_strings_message_details_type_sms_txt">Text message</string>
    <string name="conversations_strings_message_details_type_mms_txt">MMS</string>
    <string name="conversations_strings_message_details_priority_normal_txt">Normal</string>
    <string name="conversations_strings_message_details_mms_priority_low_txt">Low</string>
    <string name="conversations_strings_message_details_mms_priority_high_txt">High</string>
    <string name="conversations_strings_message_details_status_sending_txt">Sending</string>
    <string name="conversations_strings_message_details_status_sent_txt">Sent</string>
    <string name="conversations_strings_message_details_status_delivered_txt">Delivered</string>
    <string name="conversations_strings_message_details_status_queued_txt">Queued</string>
    <string name="conversations_strings_message_details_status_failed_txt">Failed</string>
    <string name="conversations_strings_message_details_status_received_txt">Received</string>
    <string name="conversations_strings_action_confirm_message_delete_txt">Delete message?</string>
    <string name="conversations_strings_action_confirm_message_delete_several_txt">Delete messages?</string>
    <string name="conversations_strings_action_confirm_message_template_delete_txt">Delete template?</string>
    <string name="conversations_strings_action_confirm_message_template_delete_several_txt">Delete templates?</string>
    <string name="conversations_strings_menu_action_subject_add_txt">Add subject</string>
    <string name="conversations_strings_menu_action_subject_remove_txt">Delete subject</string>
    <string name="conversations_strings_subject_text_input_hint_txt">Write subject</string>
    <string name="conversations_strings_add_media_capture_picture_txt">Take photo</string>
    <string name="conversations_strings_add_media_capture_video_txt">Record video</string>
    <string name="conversations_strings_add_media_picture_txt">Add picture</string>
    <string name="conversations_strings_add_media_audio_txt">Add sound</string>
    <string name="conversations_strings_add_media_sketch_txt">Add sketch</string>
    <string name="conversations_strings_conversationlist_header_new_conversation_txt">New conversation</string>
    <string name="conversations_strings_conversationlist_menu_deleteconversations_txt">Delete conversations</string>
    <string name="conversations_strings_conversationlist_menu_search_txt">Search</string>
    <string name="conversations_strings_conversationlist_menu_settings_txt">Settings</string>
    <string name="conversations_strings_conversationlist_menu_starredmessage_txt">Starred messages</string>
    <string name="conversations_strings_settings_sim_messages_info_txt">Messages saved in SIM card</string>
    <string name="conversations_strings_accessibility_add_attachment_button_txt">Add attachment</string>
    <string name="conversations_strings_settings_cost_saving_summary_txt">Convert special characters to send more text in each text message</string>
    <string name="conversations_strings_settings_cost_saving_txt">Cost saving</string>
    <string name="conversations_strings_settings_delivery_report_txt">Delivery report</string>
    <string name="conversations_strings_settings_read_report_txt">MMS read reports</string>
    <string name="conversations_strings_settings_read_report_info_txt">Request and send MMS read reports</string>
    <string name="conversations_strings_settings_mms_auto_retrieval_title_txt">MMS auto download</string>
    <string name="conversations_strings_settings_mms_auto_retrieval_info_txt">Download multimedia messages automatically</string>
    <string name="conversations_strings_settings_mms_retrieval_during_roaming_txt">MMS when roaming</string>
    <string name="conversations_strings_settings_mms_retrieval_during_roaming_info_txt">Receive multimedia messages in roaming network</string>
    <string name="conversations_strings_settings_wap_push_settings_title_txt">Push settings</string>
    <string name="conversations_strings_settings_wap_push_settings_info_txt">Settings for messages sent out by your service provider</string>
    <string name="conversations_strings_settings_smsc_number_title_txt">SMS center number</string>
    <string name="conversations_strings_settings_smsc_number_loading_info_txt">Loading</string>
    <string name="conversations_strings_settings_notification_enabled_txt">Notifications</string>
    <string name="conversations_strings_settings_notification_enabled_info_txt">Notify in status bar for new messages</string>
    <string name="conversations_strings_settings_notification_ringtone_txt">Notification tone</string>
    <string name="conversations_strings_settings_notification_ringtone_info_txt">Play a specific tone for message notifications</string>
    <string name="conversations_strings_settings_notification_vibration_txt">Notification vibration</string>
    <string name="conversations_strings_settings_notification_vibration_info_txt">Vibrate when receiving new messages</string>
    <string name="conversations_strings_settings_sim_messages_txt">SIM messages</string>
    <string name="conversations_strings_text_input_hint_txt">Write message</string>
    <string name="conversations_strings_toppanel_add_recipient_txt">Add recipient</string>
    <string name="conversations_strings_toppanel_add_contact_txt">Add to Contacts</string>
    <string name="conversations_strings_editview_done_txt">Done</string>
    <string name="conversations_strings_convert_to_sms_txt">Convert to text message</string>
    <string name="conversations_strings_convert_to_mms_txt">Convert to multim. msg</string>
    <string name="gui_cancel_txt">Cancel</string>
    <string name="conversations_strings_accessibility_ssc_preview_slideshow_txt">MMS Preview</string>
    <string name="conversations_strings_ssc_edit_txt">Edit</string>
    <string name="conversations_strings_ssc_attach_location_txt">Add my location</string>
    <string name="conversations_strings_action_select_current_location_txt">Current location</string>
    <string name="conversations_strings_settings_led_notification_enabled_txt">Notification light</string>
    <string name="conversations_strings_location_input_hint_txt">Location</string>
    <string name="conversations_strings_address_input_hint_txt">Address</string>
    <string name="conversations_strings_settings_cellbroadcast_enabled_txt">Cell Broadcast SMS</string>
    <string name="conversations_strings_menu_action_text_template_txt">Select message template</string>
    <string name="conversations_strings_settings_text_template_txt">Message templates</string>
    <string name="conversations_strings_settings_emergency_alerts_txt">Emergency alerts</string>
    <string name="conversations_strings_settings_category_notification">Notifications</string>
    <string name="conversations_strings_settings_category_message_template">Message template</string>
    <string name="conversations_strings_settings_category_mms_settings">MMS settings</string>
    <string name="conversations_strings_settings_category_general_settings">General settings</string>
    <string name="conversations_strings_settings_notification_settings">Notification settings</string>
    <string name="conversations_strings_settings_notification_settings_info_txt">Settings for message notifications</string>
    <string name="conversations_strings_conversationlist_menu_mark_read_txt">Mark as read</string>
    <string name="conversation_call_contact">Call</string>
    <string name="conversations_strings_send_button_txt">@string/gui_send_txt</string>
    <string name="conversations_strings_settings_category_alerts">EMERGENCY ALERTS(CMAS)</string>
</resources>