<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/conversation_bottom_panel" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/conversation_added_media_panel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/messaging_icon_left_padding">
        <ImageButton android:id="@id/conversation_preview" android:visibility="gone" android:layout_width="@dimen/bottom_panel_send_button_width" android:layout_height="@dimen/bottom_panel_send_button_height" android:src="@drawable/conv_mms_preview" android:layout_centerVertical="true" android:contentDescription="@string/conversations_strings_accessibility_ssc_preview_slideshow_txt" android:layout_alignParentEnd="true" />
        <com.sonyericsson.conversations.ui.PileView android:id="@id/conversation_attachment_masterpile" android:visibility="visible" android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="@dimen/attachment_pileview_height" android:layout_alignParentTop="true" android:layerType="software" android:layoutDirection="locale" android:layout_toStartOf="@id/conversation_preview" android:layout_alignParentStart="true" />
        <TextView android:textColor="@color/conversation_editor_attachment_number_of_files_color" android:id="@id/conversation_added_media_counter" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_marginEnd="@dimen/attachment_info_boxes_end_margin" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout android:background="@drawable/shadow_border" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <com.sonyericsson.conversations.view.ComposerLinearLayout android:layout_gravity="bottom" android:id="@id/conversation_composer_linear_layout" android:background="@color/conversation_editor_composer_background_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/generic_margin">
        <com.sonyericsson.conversations.view.SnapshotLinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/conversation_edit_container" android:background="@color/conversation_editor_composer_background_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
            <EditText android:gravity="start|center" android:layout_gravity="top" android:id="@id/conversation_edit_subject" android:background="@null" android:paddingTop="@dimen/composer_vertical_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/conversations_strings_subject_text_input_hint_txt" android:scrollHorizontally="false" android:singleLine="true" android:inputType="textCapSentences" style="@style/BubbleText.Subject" />
            <com.sonyericsson.conversations.ui.AutoScrollEditText android:gravity="start|center" android:layout_gravity="top" android:id="@id/conversation_edit_text" android:background="@null" android:paddingTop="@dimen/composer_vertical_padding" android:paddingBottom="@dimen/composer_vertical_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/conversation_actionbar_height" android:hint="@string/conversations_strings_text_input_hint_txt" android:minLines="@integer/conversation_input_field_min_nbr_rows" android:scrollHorizontally="false" android:singleLine="false" android:layout_weight="1.0" android:inputType="textCapSentences|textMultiLine|textShortMessage" style="@style/BubbleText" />
        </com.sonyericsson.conversations.view.SnapshotLinearLayout>
        <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:id="@id/conversation_send_button_container" android:layout_width="@dimen/bottom_panel_send_button_width" android:layout_height="wrap_content" android:layout_marginStart="@dimen/bottom_panel_send_button_margin" android:layout_marginEnd="@dimen/bottom_panel_send_button_margin">
            <include layout="@layout/semc_message_infoboxes" />
            <FrameLayout android:layout_gravity="end" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:enabled="false" android:textSize="@dimen/bottom_panel_send_button_text_size" android:textColor="@drawable/conv_send_button_text_color" android:layout_gravity="end" android:id="@id/conversation_send_button" android:background="@drawable/conv_send_button_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/bottom_panel_send_button_height" android:layout_marginBottom="@dimen/bottom_panel_send_button_tiny_margin" android:text="@string/conversations_strings_send_button_txt" />
                <ProgressBar android:layout_gravity="center" android:id="@id/conversation_send_button_spinner" android:visibility="gone" android:layout_width="@dimen/send_button_spinner_size" android:layout_height="@dimen/send_button_spinner_size" android:indeterminateOnly="true" style="?android:attr/progressBarStyleSmallInverse" />
            </FrameLayout>
            <Button android:textSize="@dimen/bottom_panel_send_button_text_size" android:layout_gravity="end" android:id="@id/conversation_edit_button" android:background="@drawable/conv_send_button_background" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/bottom_panel_send_button_height" android:text="@string/conversations_strings_ssc_edit_txt" />
            <ImageButton android:layout_gravity="end" android:id="@id/conversation_tool_button" android:layout_width="fill_parent" android:layout_height="@dimen/bottom_panel_send_button_height" android:src="@drawable/conv_add_attachment" android:contentDescription="@string/conversations_strings_accessibility_add_attachment_button_txt" />
        </LinearLayout>
    </com.sonyericsson.conversations.view.ComposerLinearLayout>
    <ImageView android:background="@drawable/shadow_border" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:id="@id/conversation_bottom_panel_tool_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/quick_attachment_top_margin" android:layout_marginBottom="@dimen/quick_attachment_bottom_margin" android:paddingStart="@dimen/messaging_icon_left_padding">
        <ImageButton android:layout_gravity="center" android:id="@id/conversation_add_media_btn" android:background="?android:actionBarItemBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/conv_add_media_item" android:layout_weight="1.0" android:contentDescription="@string/conversations_strings_add_media_picture_txt" />
        <ImageButton android:layout_gravity="center" android:id="@id/conversation_take_photo" android:background="?android:actionBarItemBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/conv_take_photo_item" android:layout_weight="1.0" android:contentDescription="@string/conversations_strings_add_media_capture_picture_txt" />
        <ImageButton android:layout_gravity="center" android:id="@id/conversation_sketch_button" android:background="?android:actionBarItemBackground" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/conv_add_doodle" android:layout_weight="1.0" android:contentDescription="@string/conversations_strings_add_media_sketch_txt" />
        <ImageButton android:layout_gravity="center" android:id="@id/conversation_add_sounds_button" android:background="?android:actionBarItemBackground" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/conv_add_sounds" android:layout_weight="1.0" android:contentDescription="@string/conversations_strings_add_media_audio_txt" />
        <ImageButton android:layout_gravity="center" android:id="@id/conversation_share_location_button" android:background="?android:actionBarItemBackground" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/conv_add_location" android:layout_weight="1.0" android:contentDescription="@string/conversations_strings_ssc_attach_location_txt" />
        <ImageButton android:layout_gravity="center" android:id="@id/conversation_take_video" android:background="?android:actionBarItemBackground" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/conv_take_video" android:layout_weight="1.0" android:contentDescription="@string/conversations_strings_add_media_capture_video_txt" />
    </LinearLayout>
</LinearLayout>